<resources>
    <string name="app_name">My Application</string>
    <string name="title_app_login">Login</string>
    <string name="welcome">Welcome! You\'re our best client. Please sign in to continue.</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_account">Don\'t have account? Sign Up</string>
    <string name="or">or</string>

    <string name="sign_up">Sign Up</string>
    <string name="register_welcome">Create an account to get started.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="registration_success">Account created successfully!</string>
    <string name="registration_failed">Registration failed: %s</string>

    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>